--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "@jrfdkjgn/hello-world",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jrfdkjgn/hello-world"
+  }
 }
